# CelestrixBlockchain

./: .gitignore  CMakeLists.txt  README.md  clang-tidy.txt
src/: Block.cpp  Block.h  Blockchain.cpp  Blockchain.h  CMakeLists.txt  Transaction.cpp  Transaction.h  main.cpp  private_key.pem  public_key.pem  sha256.cpp  sha256.h
test/: CMakeLists.txt  test_block.cpp  test_blockchain.cpp  test_sha256.cpp  test_transaction.cpp
